--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,7 +4,9 @@ events { worker_connections 1024; }
 
 http {
     upstream core-app {
-        server core-app:5000;
+        server core-app1:5000;
+        server core-app2:5000;
+        server core-app3:5000;
     }
 
     server {
